--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>Suprim Bhattarai | Full Stack Developer</title>
+    <title>Suprim Bhattarai</title>
     <meta name="description" content="Portfolio of Suprim Bhattarai, a full stack developer specializing in modern web technologies. Explore projects, skills, and contact info." />
     <meta name="keywords" content="Suprim Bhattarai, full stack developer, React, Django, web portfolio, software engineer, JavaScript, MySQL, GitHub" />
     <meta name="author" content="Suprim Bhattarai" />
