--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>Fuck you bro</h1>
+    <h1> you bro</h1>
     <!-- Vite will inject JS and CSS here -->
   </body>
 </html>
