--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suprim Bhattarai</title>
-    <link rel="icon" type="image/x-icon" href="./assets/suprimlogo-BRE3c2BY.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/suprimlogo-BRE3c2BY.png" />
   </head>
   <body>
     <div id="root"></div>
+    <h1> you bro</h1>
     <!-- Vite will inject JS and CSS here -->
   </body>
 </html>
