--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Mobile and Theme Colors -->
-    <meta name="theme-color" content="skyblue" />
+    <meta name="theme-color" content="#99b4c8" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Suprim Bhattarai" />
 
